test/compile_errors/stage1/obj/array_access_of_type.zig
export fn foo() void {
    var b: u8[40] = undefined;
    _ = b;
}

// array access of type
//
// tmp.zig:2:14: error: array access of non-array type 'type'
